@@ -1,5 +1,5 @@
 # Build ELLCC.
-VERSION=0.1.1
+VERSION=0.1.2
 
 ifeq ($(VERBOSE),)
   MFLAGS=--no-print-directory
