@@ -1,1 +1,0 @@
-../../../../llvm/tools/clang/lib/Headers/altivec.h
