@@ -1,3 +1,7 @@
+latest SVN:
+
+* Fixed missing clang headers for i386.
+
 version 0.1.1:
 
 * Update to musl 1.1.5
